--- a/mysite/templates/sidebar.html
+++ b/mysite/templates/sidebar.html
@@ -1,16 +1,16 @@
-{% extends 'base.html' %} {% block content %}
+{% block sidebar %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 card mb-4  mt-3 left  top">
-            <div class="card-body">
-                <h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
-                <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
-                <p class="card-text ">{{ post.content | safe }}</p>
-            </div>
+
+
+<!-- Sidebar Widgets Column -->
+<div class="col-md-4 float-right ">
+    <div class="card my-4">
+        <h5 class="card-header">About Us</h5>
+        <div class="card-body">
+            <p class="card-text"> This is my first blog using Django :D</p>
+            <a href="#" class="btn btn-danger">Know more!</a>
         </div>
-        {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
     </div>
 </div>
 
-{% endblock content %}
+{% endblock sidebar %}
